refactor: Improve project naming and VST support
This commit refactors the project name to "daw-lusic-gutu-hub" and "daw lusic gutu-hub" in `package.json` and `metadata.json` respectively, resolving a previous naming inconsistency.

It also enhances the VST audio streaming implementation in `AudioEngine.ts` by:
- Adding an `isVST` property to plugin chain entries for clear identification.
- Implementing methods to enable and disable VST audio streaming, including proper connection/disconnection logic and worklet injection.
- Ensuring VST plugins are correctly bypassed when streaming is disabled.

Additionally, the `ErrorBoundary` component has been refactored for improved build compatibility and clarity:
- State initialization is now consistently handled within the constructor.
- The `handleReset` method is defined as a class property arrow function for direct access to `this`, resolving potential context issues in certain build environments.
- The name of the "CHORUS" plugin has been updated to "Dimension Chorus" for better descriptive accuracy.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-daw-lusic-gutu-hub-32",
+  "name": "daw-lusic-gutu-hub",
   "private": true,
   "version": "0.0.0",
   "type": "module",
